--- a/frontend/login.pug
+++ b/frontend/login.pug
@@ -13,7 +13,7 @@ block content
             div.form-control
                 label(for="password") Password
                 input(type="text", name="password")#password
-            button.btn(type="submit") Create Account
+            button.btn(type="submit") Log in
             
 
 
