--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Oxygen', sans-serif;
 }
 
 main {
@@ -33,8 +33,8 @@ form {
 
 .main-header {
   width: 100%;
-  height: 3.5rem;
-  background-color: #00695c;
+  height: 2.8rem;
+  background-color: #4b4d4c;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -75,7 +75,7 @@ form {
 .main-header__item a.active,
 .main-header__item button:hover,
 .main-header__item button:active {
-  color: #ffeb3b;
+  color: #3bb1ff;
 }
 
 .mobile-nav {
@@ -119,7 +119,7 @@ form {
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
-  background: #00695c;
+  background: #4b4d4c;
   color: white;
   border-radius: 3px;
 }
@@ -201,8 +201,8 @@ form {
   padding: 0.25rem 1rem;
   text-decoration: none;
   font: inherit;
-  border: 1px solid #00695c;
-  color: #00695c;
+  border: 1px solid #4b4d4c;
+  color: #4b4d4c;
   background: white;
   border-radius: 3px;
   cursor: pointer;
@@ -210,7 +210,7 @@ form {
 
 .btn:hover,
 .btn:active {
-  background-color: #00695c;
+  background-color: #4b4d4c;
   color: white;
 }
 
