--- a/frontend/add-product.pug
+++ b/frontend/add-product.pug
@@ -16,10 +16,10 @@ block content
             div.form-control
                 label(for="description") Description
                 textarea(name="description", rows="5")#description  
-            div.form-control
-                label(for="price") Price
-                input(type="number", name="price")#price 
-            button.btn(type="submit") Add Product 
+            //- div.form-control
+            //-     label(for="price") Price
+            //-     input(type="number", name="price")#price 
+            button.btn(type="submit") Add Image
             
 
 
