--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -11,15 +11,14 @@ block content
                 each product in prods
                     article.card.product-item 
                         header.card__reader  
-                            h1.product__title  #{product.title}
                         div.card__image 
                             img(src= product.imageUrl , alt="A Book")
                         div.card__content  
-                            h2.product__price $#{product.price}
-                            p.product__description #{product.description}
-                        .card__actions 
-                            a.btn(href="/products/<%= product.id %>") details
-                            button.btn Add to Cart 
+                            h1.product__title  #{product.title}
+                            p.product__description Uploaded by: #{product.uploader}
+                        //- .card__actions 
+                        //-     a.btn(href="/products/<%= product.id %>") details
+                        //-     button.btn Add to Cart 
                             
         else 
             h1 No Products
