--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -12,7 +12,7 @@ block content
                     article.card.product-item 
                         header.card__reader  
                         div.card__image 
-                            img(src= product.imageUrl , alt="A Book")
+                            img(src= product.imageUrl , alt="image")
                         div.card__content  
                             h1.product__title  #{product.title}
                             p.product__description Uploaded by: #{product.uploader}
@@ -21,7 +21,7 @@ block content
                         //-     button.btn Add to Cart 
                             
         else 
-            h1 No Products
+            h1 No Images
 
 
 
