--- a/frontend/admin.pug
+++ b/frontend/admin.pug
@@ -11,11 +11,10 @@ block content
                 each product in prods
                     article.card.product-item 
                         header.card__reader  
-                            h1.product__title  #{product.title}
                         div.card__image 
-                            img(src=product.imageUrl , alt="book")
+                            img(src=product.imageUrl , alt="image")
                         div.card__content  
-                            h2.product__price $#{product.price}
+                            h1.product__title  #{product.title}
                             p.product__description #{product.description}
                         .card__actions
                             button.btn edit
@@ -23,7 +22,7 @@ block content
                                 input(type="hidden" value=product.id name="productId")
                                 button.btn delete
         else 
-            h1 No Products
+            h1 No Images
 
 
 
